Create image folder and fix image issues

--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -7,14 +7,15 @@
 <body>
     <h1>Red Curry Chicken</h1>
 
-    <img src="recipes/curry.png" alt="red curry chicken">
+    <img src="../recipes/images/curry.jpg" alt="red curry chicken">
 
-    <h6>Description</h6>
+    <h3>Description</h3>
     <p>Red Curry Chicken is a simple and easy meal that is sure to satisfy.</p>
-    <p>This recipe only contains 5 ingredients and they are readily available at your local grocery store.
+    <p>This recipe comes from <a href=https://www.allrecipes.com>here</a>.</p>
+    <p>Luckily you only need 5 ingredients and they are readily available at your local grocery store.
     </p>
 
-    <h5>Ingredients</h5>
+    <h4>Ingredients</h4>
     <ul>
         <li>2 tbls coconut oil</li>
         <li>16 oz boneless chicken breast, cubed</li>
@@ -23,6 +24,7 @@
         <li>16 oz package dried rice stick vermicelli noodles</li>
     </ul>
 
+    <h4>Directions</h4>
     <ol>
         <li>Heat oil in a large skillet on high heat. Add chicken cubes; cook until browned, about 2 minutes per side. Reduce heat to medium-high and add coconut cream and curry sauce. Cook until chicken is no longer pink in the center and the juices run clear, about 5 minutes. An instant-read thermometer inserted into the center should read at least 165 degrees F</li>
         <li>Fill a large pot with lightly salted water and bring to a rolling boil; stir in vermicelli pasta and return to a boil. Cook pasta uncovered, stirring occasionally, until the pasta is tender yet firm to the bite, 4 to 5 minutes. Drain.</li>
