--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <h1>Odin Recipes</h1>
 </body>
 
-
-
+<ul>
+    <li><a href="./recipes/curry.html">Red Curry Chicken</a>
+    </li>
+    <li><a href="./recipes/tacos.html">Hibiscus Tacos</a></li>
+    <li><a href="./recipes/icecream.html">Lavender Honey Ice Cream</a></li>
+</ul>
 
 
 
